# arrow-study

./: .gitignore  README.md
cpp/: CMakeLists.txt  build.sh  clean.sh
cpp/include/: dummy_extension.hpp
cpp/src/: dummy_extension.cpp
cpp/tests/: test_array.cpp  test_array_statistics.cpp  test_binary_view.cpp  test_extension.cpp  test_fixed_shape_tensor.cpp  test_main.cpp  test_memory_pool.cpp  test_record_batch.cpp
javascript/: package-lock.json  package.json  vitest.config.mts
javascript/tests/: field.test.ts  sample.test.ts  table.test.ts
python/chap1/: record_batch.py
ruby/: Gemfile  Rakefile
ruby/lib/: arrow_practice.rb
ruby/test/: record_batch_builder_test.rb  sample_test.rb  schema_test.rb  test_helper.rb  time_test.rb
